--- a/package.json
+++ b/package.json
@@ -28,14 +28,22 @@
     "@types/puppeteer": "^7.0.4",
     "@types/redis": "^4.0.11",
     "antd": "^5.27.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "puppeteer": "^24.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -45,12 +53,18 @@
     "redis": "^5.8.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
+    "winston": "^3.17.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.15.30",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
