--- a/api/package.json
+++ b/api/package.json
@@ -15,33 +15,33 @@
   "author": "Genealogy System Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.1",
+    "dotenv": "^17.2.1",
+    "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
-    "joi": "^17.11.0",
-    "multer": "^1.4.5-lts.1",
-    "redis": "^4.6.10",
-    "@supabase/supabase-js": "^2.38.4",
-    "winston": "^3.11.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5"
+    "joi": "^18.0.1",
+    "multer": "^2.0.2",
+    "redis": "^5.8.2",
+    "@supabase/supabase-js": "^2.56.0",
+    "winston": "^3.17.0",
+    "compression": "^1.8.1",
+    "express-rate-limit": "^8.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
-    "@types/compression": "^1.7.5",
-    "@types/node": "^20.8.10",
-    "typescript": "^5.2.2",
+    "@types/cors": "^2.8.19",
+    "@types/morgan": "^1.9.10",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
+    "@types/compression": "^1.8.1",
+    "@types/node": "^22.15.30",
+    "typescript": "~5.8.3",
     "ts-node": "^10.9.1",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.10",
     "eslint": "^8.52.0",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
