--- a/api/package.json
+++ b/api/package.json
@@ -11,42 +11,48 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
-  "keywords": ["genealogy", "family-tree", "api", "typescript"],
+  "keywords": [
+    "genealogy",
+    "family-tree",
+    "api",
+    "typescript"
+  ],
   "author": "Genealogy System Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.2",
-    "cors": "^2.8.5",
-    "helmet": "^8.1.0",
-    "morgan": "^1.10.1",
-    "dotenv": "^17.2.1",
+    "@supabase/supabase-js": "^2.56.0",
+    "@vercel/node": "^5.3.13",
     "bcryptjs": "^3.0.2",
-    "jsonwebtoken": "^9.0.2",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
     "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "redis": "^5.8.2",
-    "@supabase/supabase-js": "^2.56.0",
-    "winston": "^3.17.0",
-    "compression": "^1.8.1",
-    "express-rate-limit": "^8.0.1"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.19",
-    "@types/morgan": "^1.9.10",
     "@types/bcryptjs": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
     "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.15.30",
-    "typescript": "~5.8.3",
-    "ts-node": "^10.9.1",
-    "nodemon": "^3.1.10",
-    "eslint": "^8.52.0",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "eslint": "^8.52.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.8"
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.1",
+    "typescript": "~5.8.3"
   },
   "engines": {
     "node": ">=18.0.0"
